k8s/beta.yml
# Ingress was removed

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: go-demo-2-beta-db # Changed the name
spec:
  selector:
    matchLabels:
      type: db
      service: go-demo-2-beta # Changed the label
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        type: db
        service: go-demo-2-beta # Changed the label
        vendor: MongoLabs
    spec:
      containers:
      - name: db
        image: mongo:3.3

---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-2-beta-db # Changed the name
spec:
  ports:
  - port: 27017
  selector:
    type: db
    service: go-demo-2-beta

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: go-demo-2-beta # Changed
spec:
  replicas: 3
  selector:
    matchLabels:
      type: api
      service: go-demo-2-beta # Changed the label
  template:
    metadata:
      labels:
        type: api
        service: go-demo-2-beta # Changed the label
        language: go
    spec:
      containers:
      - name: main # Changed the name
        image: vfarcic/go-demo-2:beta
        readinessProbe:
          httpGet:
            path: /demo/hello
            port: 8080
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /demo/hello
            port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-2-beta # Changed the name
spec:
  type: NodePort # Added
  ports:
  - port: 8080
  selector:
    type: api
    service: go-demo-2-beta # Changed the label
